sass/layout.scss
/* ... */
.services-examples {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: center;
}

.services-img {
	max-width: 44%;
}

.services-img img {
	border-radius: 10px 30px 10px 30px;
}

.services-icon-set {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: center;
	margin: 0 auto;
	transition: all 0.3s ease;
	
	.services-icon {
		flex-grow: 1;
		margin-right: 6px;
		margin-left: 6px;
		text-align: center;
	}

	img {
		height: 80px;
		padding: 16px;
		background: url("../images/icons/icon-hex.svg") no-repeat center;
		background-size: contain;
	}

	p {
		font-size: 1.125em;
	}
}

.services {

	.one-third {
		min-height: 320px;
	}

	.one-third img {
		height: 40px;
		float: left;
		margin: .75em 1em 0 0;
	}
}







/* Portfolio */

.gallery-content {
	position: relative;
	margin: 0 10px 10px 10px;
}

.gallery-content.module {
	min-height: 500px;
}

.gallery-content h3 {
	font-size: 1.25em;
	margin: 10px 0 5px 0;
}

.gallery-content p {
	width: 100%;
	margin: 5px 0 0 0;
	overflow: hidden;
	text-overflow: ellipsis;
}

.gallery-content a {
	cursor:pointer;	
	margin-right: auto;
	margin-left: auto;
}

.gallery-content img {
	margin: 0;
	border-radius: 10px 30px 10px 30px;
	transition: all .3s linear 0s;
	border: none;
}

.gallery-content img:hover {
	box-shadow: 0 0 5px #000;
	transform: scale(1.02);
}

.gallery-content .button {
	position: absolute;
	left: 0;
	bottom: 0;
	width: 100%;
	padding: 4px 0;
	border-radius: 0 0 10px 30px;
	border: none;
	box-shadow: none;
	text-align: center;
}

.gallery-content .button:hover {
	border: none;
}

.gallery-image {
	position: relative;
}

.gallery-content span {
	position: absolute;
	top: 6px;
	right: 6px;
}

.gallery-content .icon-pin {
	position: absolute;
	top: 6px;
	right: 6px;
}

#noMarginBot {
	margin-bottom: 0px;
}









/* Forms */
.form-container {
	position: relative;
}

label {
	display: block;
}

.label1 {
	font-family: Orbitron, Verdana, sans-serif;
	font-size: 1.125em;
	color: $red;
	text-align:left;
	clear:left;
	margin-right:10px;
	font-weight:bold;
}

.label2 {
	font-family: Orbitron, Verdana, sans-serif;
	font-size: 1.125em;
	color: $red;
	text-align:left;
	clear:left;
	margin-right:10px;
	font-weight:bold;
}

input, textarea, select {
	font-family: Questrial, Helvetica, sans-serif;
	font-size: 1.25em;
	border: 2px solid $gray-medium;
	padding: 12px;
	margin: 10px 0;
	width: 100%;
	background: $white;
	border-radius: 5px 15px 5px 15px;	
}

input:focus, textarea:focus, select:focus {
	border: 2px solid $red;
	outline: 0;
}

.button-submit {
	text-align: center;
	font-size: 1.25em;
	width: 100%;
}

.inputFocus {
	border: 2px solid $red;
}

.noInput {
	background-color: #000;
	border: 2px solid $red;
}


label.error {
	font-family: Questrial, Helvetica, sans-serif;
	font-size: 0.8em;
	font-style: italic;
	color: $red;
	margin-left: 10px;
}

input.error {
	color: $red;
	border: 2px solid $red;
}

#success {
	font-family: Questrial, Helvetica, sans-serif;
	font-size: 1.125em;
	color: $black;
	text-align:left;
	clear:left;
	margin: 0 0 10px 0;
}

.loading-content {
	position: absolute;
	z-index: 99;
	bottom: 0;
	width: 100%;
	text-align: center;
	display: none;
}

.loading-animation {
	width: 42px;
	margin: 0 auto;
}

.loading-animation-hex1 {
	animation: 1s ease 0s infinite hex-animation; 
}

.loading-animation-hex2 {
	animation: 1s ease .3s infinite hex-animation;
}

.loading-animation-hex3 {
	animation: 1s ease .6s infinite hex-animation;
}

@keyframes hex-animation {
	from {opacity: 1;}
	to {opacity: 0;}
}








/* Plugin Styles */

.owl-carousel.module {
	margin-bottom: 40px;
}

#lightbox-nav a{
	transition: none;
}

.ui-tooltip {
	padding: 5px;
	position: absolute;
	z-index: 9999;
	width: 75%;
	border: 2px solid #4F4F4F;
	box-shadow: 1px 1px 2px $black;
}

.ui-tooltip-content {
	font-family: Questrial, Helvetica, sans-serif;
	font-size: 0.75em;
	color: $white;
}

* html .ui-tooltip {
	background-image: none;
}

body .ui-tooltip { border-width: 2px; }

/* Misc */
	.remove-bottom { margin-bottom: 0 !important; }
	.half-bottom { margin-bottom: 10px !important; }
	.add-bottom { margin-bottom: 20px !important; }


@supports (animation-name: test) {

	.hero {

		img {
			opacity: 0;
			animation: bounce-in ease-in .3s forwards;
			animation-delay: .2s;
		}

		h2 {
			opacity: 0;
			animation: bounce-in ease-in .3s forwards;
			animation-delay: .3s;
		}	

		p {
			opacity: 0;
			animation: bounce-in ease-in .3s forwards;
			animation-delay: .3s;
		}

		.button {
			opacity: 0;
			animation: bounce-in ease-in .3s forwards;
			animation-delay: .4s;
		}
	}

	section {
		opacity: 0;
		animation: bounce-in ease-in .3s forwards;
	}

	.services-icon-set {
		
		.services-icon {

			&:nth-child(1) {
				opacity: 0;
				animation: bounce-in ease-in .3s forwards;
				animation-delay: .3s;
			}
			&:nth-child(2) {
				opacity: 0;
				animation: bounce-in ease-in .3s forwards;
				animation-delay: .4s;
			}
			&:nth-child(3) {
				opacity: 0;
				animation: bounce-in ease-in .3s forwards;
				animation-delay: .5s;
			}
			&:nth-child(4) {
				opacity: 0;
				animation: bounce-in ease-in .3s forwards;
				animation-delay: .6s;
			}
			&:nth-child(5) {
				opacity: 0;
				animation: bounce-in ease-in .3s forwards;
				animation-delay: .7s;
			}
			&:nth-child(6) {
				opacity: 0;
				animation: bounce-in ease-in .3s forwards;
				animation-delay: .8s;
			}
			&:nth-child(7) {
				opacity: 0;
				animation: bounce-in ease-in .3s forwards;
				animation-delay: .9s;
			}
			&:nth-child(8) {
				opacity: 0;
				animation: bounce-in ease-in .3s forwards;
				animation-delay: 1.0s;
			}
			&:nth-child(9) {
				opacity: 0;
				animation: bounce-in ease-in .3s forwards;
				animation-delay: 1.1s;
			}
		}
	}

	.gallery-content .icon-pin {
		opacity: 0;
		animation: bounce-in ease-in .3s forwards;
		animation-delay: .6s;
	}
}






/* Media Queries */

@media all and (min-width: 960px) {

}
/* ... */

